--- a/index.html
+++ b/index.html
@@ -8,46 +8,19 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
   <style>
     html, body { height: 100%; margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: sans-serif; margin: 0; padding: 0; height: 100dvh; min-height: 100dvh;
-      background: #fff; display: flex; flex-direction: column;
-    }
+    body { font-family: sans-serif; margin: 0; padding: 0; height: 100dvh; min-height: 100dvh; background: #fff; display: flex; flex-direction: column; }
     h1 { background-color: #e4007f; color: white; padding: 12px 10px 10px 10px; margin: 0; font-size: 1.3em; letter-spacing: 0.05em; }
-    #form {
-      padding: 10px; background-color: #f9f9f9; border-bottom: 1px solid #ccc;
-      display: flex; gap: 1rem; align-items: center; font-size: 0.95em; flex-wrap: wrap; position: relative; z-index: 1002;
-    }
-    #form label { display: flex; flex-direction: column; font-weight: bold; min-width: 120px; margin-bottom: 4px; font-size: 1em; }
-    #form input { margin-top: 4px; padding: 4px; font-size: 0.95em; border: 1px solid #ccc; border-radius: 4px; min-width: 90px; }
+    #form { padding: 10px; background-color: #f9f9f9; border-bottom: 1px solid #ccc; display: flex; gap: 1rem; align-items: center; font-size: 0.95em; flex-wrap: wrap; position: relative; z-index: 1002; }
+    #form label { display: flex; flex-direction: column; font-weight: bold; min-width: 120px; margin-bottom: 4px; font-size: 1em; cursor: pointer; }
+    #form input { margin-top: 4px; padding: 4px; font-size: 0.95em; border: 1px solid #ccc; border-radius: 4px; min-width: 90px; box-sizing: border-box; }
     #map { flex: 1 1 auto; height: 70vh; width: 100%; min-height: 350px; max-height: 100dvh; z-index: 1; }
-    .leaflet-div-icon {
-      width: 6px !important; height: 6px !important; margin-left: -3px !important; margin-top: -3px !important;
-      border-radius: 3px !important; border: 2px solid #e4007f !important; background: #fff !important;
-    }
-    .custom-help-container {
-      position: absolute; top: 50%; right: 8px; transform: translateY(-50%);
-      z-index: 1003; display: flex; flex-direction: column; align-items: flex-end; pointer-events: none;
-    }
-    .custom-help-btn {
-      width: 32px; height: 32px; border-radius: 50%; background: #fff; color: #e4007f; border: 2px solid #e4007f;
-      font-size: 22px; font-weight: bold; text-align: center; line-height: 28px; box-shadow: 0 2px 6px rgba(60,64,67,0.12);
-      cursor: pointer; user-select: none; pointer-events: auto; display: flex; align-items: center; justify-content: center;
-      transition: background 0.15s, color 0.15s;
-    }
+    .leaflet-div-icon { width: 6px !important; height: 6px !important; margin-left: -3px !important; margin-top: -3px !important; border-radius: 3px !important; border: 2px solid #e4007f !important; background: #fff !important; }
+    .custom-help-container { position: absolute; top: 50%; right: 8px; transform: translateY(-50%); z-index: 1003; display: flex; flex-direction: column; align-items: flex-end; pointer-events: none; }
+    .custom-help-btn { width: 32px; height: 32px; border-radius: 50%; background: #fff; color: #e4007f; border: 2px solid #e4007f; font-size: 22px; font-weight: bold; text-align: center; line-height: 28px; box-shadow: 0 2px 6px rgba(60,64,67,0.12); cursor: pointer; user-select: none; pointer-events: auto; display: flex; align-items: center; justify-content: center; transition: background 0.15s, color 0.15s; }
     .custom-help-btn:active, .custom-help-btn:focus { background: #e4007f; color: #fff; }
-    .custom-help-balloon {
-      position: absolute; top: 38px; right: 0; width: 270px; max-width: 70vw; background: #fff; color: #333; font-size: 1em;
-      border: 1.5px solid #e4007f; border-radius: 7px; box-shadow: 0 2px 12px rgba(0,0,0,0.16);
-      padding: 15px 14px 15px 18px; z-index: 1004; pointer-events: auto; word-break: break-word; line-height: 1.7; display: none;
-    }
-    .custom-help-balloon:before {
-      content: ""; position: absolute; top: -13px; right: 20px;
-      border: 7px solid transparent; border-bottom: 10px solid #e4007f;
-    }
-    .custom-help-balloon:after {
-      content: ""; position: absolute; top: -11px; right: 22px;
-      border: 6px solid transparent; border-bottom: 10px solid #fff;
-    }
+    .custom-help-balloon { position: absolute; top: 38px; right: 0; width: 270px; max-width: 70vw; background: #fff; color: #333; font-size: 1em; border: 1.5px solid #e4007f; border-radius: 7px; box-shadow: 0 2px 12px rgba(0,0,0,0.16); padding: 15px 14px 15px 18px; z-index: 1004; pointer-events: auto; word-break: break-word; line-height: 1.7; display: none; }
+    .custom-help-balloon:before { content: ""; position: absolute; top: -13px; right: 20px; border: 7px solid transparent; border-bottom: 10px solid #e4007f; }
+    .custom-help-balloon:after { content: ""; position: absolute; top: -11px; right: 22px; border: 6px solid transparent; border-bottom: 10px solid #fff; }
     @media (max-width: 600px) {
       #form { padding: 6px 3vw 6px 3vw; gap: 0.4rem; font-size: 0.9em; }
       #form label { min-width: 90px; font-size: 0.95em; }
@@ -60,17 +33,15 @@
     @media (max-width: 400px) {
       #form label { min-width: 70px; font-size: 0.9em; }
     }
-    /* サイドナビの編集/削除ボタン隠す(念のため) */
+    /* 念のためサイドナビの編集/削除ボタンも非表示 */
     .leaflet-draw-toolbar .leaflet-draw-edit-edit,
-    .leaflet-draw-toolbar .leaflet-draw-edit-remove {
-      display: none !important;
-    }
+    .leaflet-draw-toolbar .leaflet-draw-edit-remove { display: none !important; }
   </style>
 </head>
 <body>
   <h1>一致団結ポスティングマップ</h1>
   <div id="form">
-    <label>実施日（必須）
+    <label for="date" id="date-label">実施日（必須）
       <input type="date" id="date" required />
     </label>
     <label>名前（任意）
@@ -83,7 +54,7 @@
         1. 実施日・名前を入力する<br>
         2. サイドメニューから「ポリゴンを描画」を選択し、ポスティング実施エリアを囲うようにしてマーキングする<br>
         <br>
-        修正は図形を1クリック、削除は2回クリック（スマホは2連続タップ）でできます。
+        修正は図形を1クリック（スマホは1タップ）、削除は2回クリック（スマホは2連続タップ）でできます。
       </div>
     </div>
   </div>
@@ -91,6 +62,19 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
   <script>
+    // === カレンダーをラベル全体クリックで起動 ===
+    document.addEventListener('DOMContentLoaded', function() {
+      const dateLabel = document.getElementById('date-label');
+      const dateInput = document.getElementById('date');
+      dateLabel.addEventListener('click', function(e){
+        // input自体でなければカレンダー起動
+        if (e.target !== dateInput) {
+          dateInput.focus();
+          dateInput.click();
+        }
+      });
+    });
+
     // 日本語化
     if (window.L && window.L.drawLocal) {
       L.drawLocal.draw.toolbar.buttons.polygon = 'ポリゴンを描画';
@@ -108,6 +92,10 @@
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
     const drawnItems = new L.FeatureGroup().addTo(map);
+
+    // 編集用の一時FeatureGroup
+    const editLayerGroup = new L.FeatureGroup();
+    map.addLayer(editLayerGroup);
 
     const polygonStyle = {
       color: "#e4007f",
@@ -158,28 +146,33 @@
       }
     }
 
-    // 1クリック/1タップで編集開始
+    // 編集イベント(PC:1クリック, SP:1タップ)でそのポリゴンだけ編集モード
     function bindPolygonEditEvent(layer) {
       layer.on('click', function(e) {
+        // 既存の編集グループをクリアして対象ポリゴンだけ追加
+        editLayerGroup.clearLayers();
+        editLayerGroup.addLayer(layer);
+
         // 編集モードON
-        if (drawControl._toolbars && drawControl._toolbars.edit && drawControl._toolbars.edit._modes.edit) {
-          drawControl._toolbars.edit._modes.edit.handler.enable();
-        } else {
-          // Leaflet.draw v1.0.4以降は下記でOK
-          if (drawControl && drawControl.options && drawControl.options.edit && drawControl.options.edit.featureGroup) {
-            // 編集モードを有効にする
-            // ただしツールバーが無いので、直接編集開始は難しいため図形の直接編集はカスタムが必要
-            // ここでは参考程度
-          }
+        if (!editHandler) {
+          editHandler = new L.EditToolbar.Edit(map, {
+            featureGroup: editLayerGroup
+          });
         }
+        editHandler.enable();
       });
     }
+    let editHandler = null;
+    // 編集終了時の後処理
+    map.on('draw:editstop', function(){
+      editLayerGroup.clearLayers();
+      if (editHandler) editHandler.disable();
+    });
 
     // 2回クリック/2連続タップで削除確認&削除
     function bindPolygonDeleteEvent(layer) {
       let lastTap = 0, tapCount = 0;
       const isTouch = 'ontouchstart' in window;
-
       if (isTouch) {
         layer.on('click', function(e) {
           const now = Date.now();
@@ -233,7 +226,6 @@
             date = geojson.properties.date || "";
             name = geojson.properties.name || "";
           }
-
           L.geoJSON(geojson, { style: polygonStyle }).eachLayer(layer => {
             bindPolygonInfo(layer, date, name);
             bindPolygonEditEvent(layer);
